--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -26,7 +26,7 @@
                     <div class="container">
                         <a class="brand" href="/" title="Xavier Briand">xavierbriand.net</a>
                         <ul class="nav">
-                            <li><a href="/about">About me</a></li>
+                            <li><a href="/cv">About me</a></li>
                             <li><a href="/freegli">About <strong>Freegli</strong></a></li>
                         </ul>
                     </div>
