--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -26,8 +26,8 @@
                     <div class="container">
                         <a class="brand" href="/" title="Xavier Briand">xavierbriand.net</a>
                         <ul class="nav">
-                            <li><a href="/cv">About me</a></li>
-                            <li><a href="/freegli">About <strong>Freegli</strong></a></li>
+                            <li><a href="/about/">About me</a></li>
+                            <li><a href="/freegli/">About <strong>Freegli</strong></a></li>
                         </ul>
                     </div>
                 </div>
