--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -36,16 +36,16 @@
 
         <div class="container">
 
-            <div class="content">
-                <div class="page-header">
-                    <h1>Xavier Briand: web developer<small>, but not only</small></h1>
-                </div>
+            <section class="content">
+                <header class="page-header">
+                    <h1>{% block main_title %}Xavier Briand: web developer<small>, but not only</small>{% endblock %}</h1>
+                </header>
                 <div class="row">
                     <section class="span10">
                         {% block body %}{% endblock %}
                     </section>
                 </div>
-            </div>
+            </section>
 
             <footer>
                 <p>
