--- a/_templates/tag.html
+++ b/_templates/tag.html
@@ -1,7 +1,11 @@
 {% extends "layout.html" %}
 {% block title %}Entries tagged “{{ tag.name }}”{% endblock %}
+
+{% block main_title %}
+Entries <a href="{{ link_to('tagcloud') }}">tagged</a> “{{ tag.name }}”
+{% endblock %}
+
 {% block body %}
-  <h1>Entries <a href="{{ link_to('tagcloud') }}">tagged</a> “{{ tag.name }}”</h1>
   <ul>
   {%- for entry in entries %}
     <li><a href="{{ link_to('page', slug=entry.slug) }}">{{ entry.title }}</a>
