--- a/_templates/tagcloud.html
+++ b/_templates/tagcloud.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 {% block title %}Tags{% endblock %}
+{% block main_title %}
+Tags
+{% endblock %}
 {% block body %}
-  <h1>Tags</h1>
   <ul class=tagcloud>
   {%- for tag in get_tags(limit=50) %}
     <li><a href="{{ link_to('tag', tag=tag.name) }}" style="font-size: {{
