added CV entry in header menu

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -30,6 +30,7 @@
                         <a class="brand" href="/" title="Xavier Briand">xavierbriand.net</a>
                         <ul class="nav">
                             <li><a href="/about/">About me</a></li>
+                            <li><a href="/CV/">CV</a></li>
                             <li><a href="/freegli/">About <strong>Freegli</strong></a></li>
                         </ul>
                     </div>
