--- a/_templates/_pagination.html
+++ b/_templates/_pagination.html
@@ -1,21 +1,13 @@
 <div class="pagination">
-    <ul>
-        {% if pagination.has_prev -%}
-            <li class="prev"><a href="{{ link_to(pagination.url_key, page=pagination.page - 1) }}">
-        {% else -%}
-            <li class="prev disabled"><a href="#">
-        {%- endif -%}
-        &larr; Next</a></li>
-        
-        {% for page in range(1, pagination.pages + 1) %}
-            <li class="{% if page == pagination.page %}active{% endif %}"><a href="{{ link_to(pagination.url_key, page=page) }}">{{ page }}</a></li>
-        {% endfor %}
+    {% if pagination.has_prev %}
+        <a href="{{ link_to(pagination.url_key, page=pagination.page - 1) }}">&larr; Next</a>
+    {% endif %}
 
-        {% if pagination.has_next -%}
-            <li class="next"><a href="{{ link_to(pagination.url_key, page=pagination.page + 1) }}">
-        {% else -%}
-            <li class="next disabled"><a href="#">
-        {%- endif -%}
-        Previous &rarr;</a></li>
-    </ul>
+    {% if pagination.has_prev and pagination.has_next %}
+        |
+    {% endif %}
+
+    {% if pagination.has_next -%}
+        <a href="{{ link_to(pagination.url_key, page=pagination.page + 1) }}">Previous &rarr;</a>
+    {%- endif -%}
 </div>
