--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -12,6 +12,7 @@
 
         <!-- Le styles -->
         <link href="/static/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/main.css" rel="stylesheet">
         <link href="/static/pygments.css" rel="stylesheet">
         <script type="text/javascript">
             var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-2286238-5']);_gaq.push(['_trackPageview']);
@@ -21,42 +22,31 @@
                 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
             })();
         </script>
+        <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
+        <link rel="shortcut icon" href="http://example.com/myicon.ico" />
     </head>
     <body>
-        <header>
-            <nav class="topbar">
-                <div class="fill">
-                    <div class="container">
-                        <a class="brand" href="/" title="Xavier Briand">xavierbriand.net</a>
-                        <ul class="nav">
-                            <li><a href="/about/">About me</a></li>
-                            <li><a href="/CV/">CV</a></li>
-                            <li><a href="/freegli/">About <strong>Freegli</strong></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
-
-        <div class="container">
-
-            <section class="content">
-                <header class="page-header">
-                    <h1>{% block main_title %}Xavier Briand: web developer<small>, but not only</small>{% endblock %}</h1>
-                </header>
-                <div class="row">
-                    <section class="span12">
-                        {% block body %}{% endblock %}
-                    </section>
-                </div>
+        <div id="container">
+            <div id="headerBg"></div>
+            <header>
+                <nav>
+                    <a href="http://xavierbriand.net">xavierbriand.net</a> |
+                    <a href="/about/">About me</a> |
+                    <a href="/CV/">CV</a> |
+                    <a href="/freegli/">About Freegli</a>
+                </nav>
+                <h1>
+                    {% block main_title %}Xavier Briand:<br />web developer<small>,<br />but not only</small>{% endblock %}
+                </h1>
+            </header>
+            <section>
+                {% block body %}{% endblock %}
             </section>
-
             <footer>
-                <p>
-                    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Blog</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://xavierbriand.net" property="cc:attributionName" rel="cc:attributionURL">Xavier Briand</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/xavierbriand/xavierbriand.net" rel="dct:source">github.com</a>.
-                <p>
+                <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">This Blog</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://xavierbriand.net" property="cc:attributionName" rel="cc:attributionURL">Xavier Briand</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.<br />Based on a work available on <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/xavierbriand/xavierbriand.net" rel="dct:source">github.com</a>.
             </footer>
-        </div> <!-- /container -->
+        </div>
+
     </body>
 </html>
 
