added atom alt link in layout (fixes #1)

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -23,7 +23,9 @@
             })();
         </script>
         <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
-        <link rel="shortcut icon" href="http://example.com/myicon.ico" />
+        <link rel="shortcut icon" href="/static/favicon.ico" />
+        <link rel="icon" type="image/png" href="/static/favicon.png" />
+        <link rel="alternate" type="application/atom+xml" title="Xavier Briand" href="http://xavierbriand.net/feed.atom" />
     </head>
     <body>
         <div id="container">
